--- a/document_root/index.html
+++ b/document_root/index.html
@@ -29,7 +29,7 @@
   <meta name="theme-color" content="#ffffff">
   <meta name="pageID" content="1127"/>
   
-	<link rel="canonical" href="index.html">
+	<link rel="canonical" href="https://www.scu.edu/">
   
   
   
@@ -360,16 +360,16 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     </nav>
     <div class="container d-flex align-items-center justify-content-center justify-content-lg-between pt-4 pb-4 pb-md-5">
       <div class="d-flex align-items-center">
-        <a href="index.html" class="seal d-none d-lg-inline mr-3">
+        <a href="https://www.scu.edu/" class="seal d-none d-lg-inline mr-3">
           <i class="icon-scu"></i>
           <span class="sr-only">Santa Clara University Homepage</span>
         </a>
         <div class="text-center text-md-left">
           <div class="h2 text-trajan wordmark m-0">
-            <a href="index.html" class="text-primary">Santa Clara University</a>
+            <a href="https://www.scu.edu/" class="text-primary">Santa Clara University</a>
           </div>
           <div class="h6 text-trajan wordmark m-0">
-            <a href="index.html" class="text-muted">The Jesuit University in Silicon Valley</a>
+            <a href="https://www.scu.edu/" class="text-muted">The Jesuit University in Silicon Valley</a>
           </div>
         </div>
       </div>
@@ -655,7 +655,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
    
 <footer class="footer-core border-top bg-white pt-4 footer-core">
 	<div class="container">
-		<a href="index.html" class="h4 text-dark text-uppercase wordmark d-block mb-4">Santa Clara University</a>
+		<a href="https://www.scu.edu/" class="h4 text-dark text-uppercase wordmark d-block mb-4">Santa Clara University</a>
 		<div class="row">
 			<div class="col-12 col-md-6">
 				<p class="mb-0">500 El Camino Real<br>Santa Clara, CA 95053<br>(408) 554-4000</p>
