--- a/document_root/index.html
+++ b/document_root/index.html
@@ -18,11 +18,11 @@
   <link rel="apple-touch-icon" sizes="144x144" href="https://www.scu.edu/assets/images/favicons/apple-touch-icon-144x144.png">
   <link rel="apple-touch-icon" sizes="152x152" href="https://www.scu.edu/assets/images/favicons/apple-touch-icon-152x152.png">
   <link rel="apple-touch-icon" sizes="180x180" href="https://www.scu.edu/assets/images/favicons/apple-touch-icon-180x180.png">
-  <link rel="icon" type="image/png" href="assets/images/favicons/favicon-32x32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="assets/images/favicons/android-chrome-192x192.png" sizes="192x192">
-  <link rel="icon" type="image/png" href="assets/images/favicons/favicon-96x96.png" sizes="96x96">
-  <link rel="icon" type="image/png" href="assets/images/favicons/favicon-16x16.png" sizes="16x16">
-  <link rel="manifest" href="assets/images/favicons/manifest.json">
+  <link rel="icon" type="image/png" href="https://www.scu.edu/assets/images/favicons/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="https://www.scu.edu/assets/images/favicons/android-chrome-192x192.png" sizes="192x192">
+  <link rel="icon" type="image/png" href="https://www.scu.edu/assets/images/favicons/favicon-96x96.png" sizes="96x96">
+  <link rel="icon" type="image/png" href="https://www.scu.edu/assets/images/favicons/favicon-16x16.png" sizes="16x16">
+  <link rel="manifest" href="https://www.scu.edu/assets/images/favicons/manifest.json">
   <link rel="mask-icon" href="https://www.scu.edu/assets/images/favicons/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="msapplication-TileImage" content="/assets/images/favicons/mstile-144x144.png">
